# lsstream

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
lsstream/: file_generation.py  main.py  prompts.py
src/: config.ini
src/lsstream/: defaults.py  file_generation.py  main.py  prompts.py  run.py  style.py  template.py  test.py
src/lsstream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
